tests/rosetta/out/Java/amb.error
javac error: exit status 1
/tmp/TestMochiToJavaamb2330601706/001/Amb.java:16: error: incompatible types: Object cannot be converted to List<List<String>>
            List<List<String>> w = ((List)wordsets.get(idx)).get(i);
                                                                ^
/tmp/TestMochiToJavaamb2330601706/001/Amb.java:17: error: cannot find symbol
            if (idx == 0 || Objects.equals(prev.substring(prev.length() - 1, prev.length()), w.substring(0, 1))) {
                                                                                              ^
  symbol:   method substring(int,int)
  location: variable w of type List<List<String>>
/tmp/TestMochiToJavaamb2330601706/001/Amb.java:18: error: incompatible types: List<List<String>> cannot be converted to String
                res.set(idx, w);
                             ^
/tmp/TestMochiToJavaamb2330601706/001/Amb.java:36: error: incompatible types: String cannot be converted to Number
            int out = "[" + ((Number)res.get(0)).doubleValue();
                                            ^
/tmp/TestMochiToJavaamb2330601706/001/Amb.java:39: error: incompatible types: String cannot be converted to Number
                out = (int)(out + " " + ((Number)res.get(j)).doubleValue());
                                                        ^
/tmp/TestMochiToJavaamb2330601706/001/Amb.java:42: error: incompatible types: String cannot be converted to int
            out = (int)(out + "]");
                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
6 errors
