tests/rosetta/out/Java/amb.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:31:51Z
// amb.mochi
import java.util.*;

public class Amb {
    static boolean amb(List<List<String>> wordsets, List<String> res, int idx) {
        if (Objects.equals(idx, wordsets.size())) {
            return true;
        }
        String prev = "";
        if (idx > 0) {
            prev = res.get(idx - 1);
        }
        int i = 0;
        while (i < ((Number)wordsets.get(idx).size()).doubleValue()) {
            List<List<String>> w = ((List)wordsets.get(idx)).get(i);
            if (idx == 0 || Objects.equals(prev.substring(prev.length() - 1, prev.length()), w.substring(0, 1))) {
                res.set(idx, w);
                if (amb(wordsets, res, idx + 1)) {
                    return true;
                }
            }
            i = (int)(i + 1);
        }
        return false;
    }
    static void main() {
        List<List<String>> wordset = new ArrayList<>(Arrays.asList(Arrays.asList("the", "that", "a"), Arrays.asList("frog", "elephant", "thing"), Arrays.asList("walked", "treaded", "grows"), Arrays.asList("slowly", "quickly")));
        List<String> res = Arrays.asList();
        int i = 0;
        while (i < wordset.size()) {
            res.add("");
            i = (int)(i + 1);
        }
        if (amb(wordset, res, 0)) {
            int out = "[" + ((Number)res.get(0)).doubleValue();
            int j = 1;
            while (j < res.size()) {
                out = (int)(out + " " + ((Number)res.get(j)).doubleValue());
                j = (int)(j + 1);
            }
            out = (int)(out + "]");
            System.out.println(out);
        }
        else {
            System.out.println("No amb found");
        }
    }
    static <T> List<T> append(List<T> list, T item) {
        List<T> res = new ArrayList<>(list);
        res.add(item);
        return res;
    }
    public static void main(String[] args) {
    main();
    }
}
